[gd_scene load_steps=9 format=2]

[ext_resource path="res://Nivel 1.gd" type="Script" id=1]
[ext_resource path="res://Jugador.tscn" type="PackedScene" id=2]
[ext_resource path="res://DirtAutotile.tres" type="TileSet" id=3]
[ext_resource path="res://Nivel Completado.tscn" type="PackedScene" id=4]
[ext_resource path="res://Path2D.gd" type="Script" id=5]
[ext_resource path="res://Peligro.tscn" type="PackedScene" id=6]

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -128, -64, 0, 0, 0, 0, -128, 96, 0, 0, 0, 0, -32, 96, 0, 0, 0, 0, -32, -64, 0, 0, 0, 0, -128, -64 )
}

[sub_resource type="LineShape2D" id=2]

[node name="Nivel 1" type="Node2D"]
script = ExtResource( 1 )

[node name="Jugador" parent="." instance=ExtResource( 2 )]
position = Vector2( 32, 224 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
format = 1
tile_data = PoolIntArray( 262144, 0, 196608, 262145, 0, 196609, 262146, 0, 196609, 262147, 0, 196609, 262148, 0, 196609, 262149, 0, 196609, 262150, 0, 196609, 262151, 0, 196609, 262152, 0, 196609, 262153, 0, 196609, 262154, 0, 196610, 262158, 0, 196608, 262159, 0, 196609, 262160, 0, 196609, 262161, 0, 196609, 262162, 0, 196610 )

[node name="Nivel Completado" parent="." instance=ExtResource( 4 )]

[node name="PathPeligro" type="Path2D" parent="."]
editor/display_folded = true
position = Vector2( 512, 128 )
curve = SubResource( 4 )
script = ExtResource( 5 )

[node name="PathFollow2D" type="PathFollow2D" parent="PathPeligro"]
position = Vector2( -128, -64 )
rotation = 1.5708
rotate = false

[node name="Peligro" parent="PathPeligro/PathFollow2D" instance=ExtResource( 6 )]

[node name="Caida" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 896, 608 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Caida"]
scale = Vector2( 9, 1 )
shape = SubResource( 2 )

[connection signal="body_entered" from="Nivel Completado" to="." method="_on_Nivel_Completado_body_entered"]
[connection signal="body_entered" from="PathPeligro/PathFollow2D/Peligro" to="." method="_on_Peligro2_body_entered"]
[connection signal="body_entered" from="Caida" to="." method="_on_Caida_body_entered"]
